unpackaged/main/default/objects/Account/fields/Alcohol_Units_Week__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Units_Week__c</fullName>
    <label>Alcohol (Units/Week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>