unpackaged/main/default/objects/Account/fields/BMI__c.field-meta.xml
<CustomField>
    <fullName>BMI__c</fullName>
    <formula>(Weight_kg__c /  Height_cm__c / Height_cm__c) * 10000</formula>
    <label>BMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>