unpackaged/main/default/objects/Account/fields/Date_of_Last_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Consultation__c</fullName>
    <label>Date of Last Consultation</label>
    <type>Date</type>
</CustomField>