unpackaged/main/default/objects/Account/fields/Exercise_Hours_Week__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Hours_Week__c</fullName>
    <label>Exercise (Hours/Week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>