unpackaged/main/default/objects/Account/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Insurer)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>