unpackaged/main/default/objects/Account/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <label>Job Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>