unpackaged/main/default/objects/Account/fields/Lead_Patient__c.field-meta.xml
<CustomField>
    <fullName>Lead_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Patient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>