unpackaged/main/default/objects/Account/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Organisation the the Patient is associated with, e.g. Employer (where appropriate)</description>
    <inlineHelpText>The Organisation the the Patient is associated with, e.g. Employer (where appropriate)</inlineHelpText>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Associated Patients</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>