unpackaged/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurer</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>