unpackaged/main/default/objects/Account/fields/Patient_Default_Billing_Process__c.field-meta.xml
<CustomField>
    <fullName>Patient_Default_Billing_Process__c</fullName>
    <label>Patient Default Billing Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>