unpackaged/main/default/objects/Account/fields/Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_ID__c</fullName>
    <label>Patient ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>