unpackaged/main/default/objects/Account/fields/Patient_Ref__c.field-meta.xml
<CustomField>
    <fullName>Patient_Ref__c</fullName>
    <displayFormat>PID-{000000}</displayFormat>
    <label>Patient Ref</label>
    <type>AutoNumber</type>
</CustomField>