unpackaged/main/default/objects/Account/fields/Primary_Care_Lead__c.field-meta.xml
<CustomField>
    <fullName>Primary_Care_Lead__c</fullName>
    <label>Primary Care Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>