unpackaged/main/default/objects/Account/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Referral Partner)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>