unpackaged/main/default/objects/Account/fields/Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Notes__c</fullName>
    <label>Risk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>