unpackaged/main/default/objects/Account/fields/Smoker__c.field-meta.xml
<CustomField>
    <fullName>Smoker__c</fullName>
    <label>Smoker</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>