unpackaged/main/default/objects/Account/fields/Treatment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Start_Date__c</fullName>
    <label>Treatment Start Date</label>
    <type>Date</type>
</CustomField>