unpackaged/main/default/objects/Account/fields/Value_of_Closed_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Closed_Won_Opportunities__c</fullName>
    <label>Value of Closed Won Opportunities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>