unpackaged/main/default/objects/Account/fields/Year_Started__c.field-meta.xml
<CustomField>
    <fullName>Year_Started__c</fullName>
    <label>Year Started</label>
    <type>Date</type>
</CustomField>