unpackaged/main/default/objects/Account/recordTypes/Service_Provider_Corporate.recordType-meta.xml
<RecordType>
    <fullName>Service_Provider_Corporate</fullName>
    <active>true</active>
    <label>Service Provider (Corporate)</label>
</RecordType>