unpackaged/main/default/objects/Account/listViews/Facilities.listView-meta.xml
<ListView>
    <fullName>Facilities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Service_Provider_Corporate</value>
    </filters>
    <label>Facilities</label>
</ListView>