unpackaged/main/default/objects/Account/listViews/Insurers.listView-meta.xml
<ListView>
    <fullName>Insurers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Insurer</value>
    </filters>
    <label>Insurers</label>
</ListView>