unpackaged/main/default/objects/Account/listViews/Patients.listView-meta.xml
<ListView>
    <fullName>Patients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Patient_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Patient</value>
    </filters>
    <label>Patients</label>
</ListView>